# uvms

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg
bluerov_ctrl/: CMakeLists.txt  package.xml
bluerov_ctrl/config/: ctrl_params_real.yaml  ctrl_params_real_uvms.yaml  ctrl_params_sim.yaml  ctrl_params_sim_uvms.yaml  model_params.yaml  watchdog_params.yaml
bluerov_ctrl/include/bluerov_ctrl/: attitude_skew_symmetric_p_module.hpp  attitude_skew_symmetric_p_module_interface.hpp  manipulator_compensation.hpp  manipulator_compensation_interface.hpp  position_p_module.hpp  position_p_module_interface.hpp  twist_model_based.hpp  twist_model_based_interface.hpp  twist_pid.hpp  twist_pid_interface.hpp  velocity_control_node_interfaces.hpp
bluerov_ctrl/launch/: node_estimation_drift_watchdog.launch.py  node_pose_control_module.launch.py  node_velocity_control.launch.py  rviz.launch.py  top_bluerov_complete.launch.py  top_bluerov_sim_complete.launch.py
bluerov_ctrl/log/: latest  latest_graph
bluerov_ctrl/nodes/: estimation_drift_watchdog_node.cpp  pose_control_module_node.cpp  velocity_control_node.cpp  velocity_control_node.hpp
bluerov_ctrl/rviz/: rviz.rviz
bluerov_ctrl/src/: attitude_skew_symmetric_p_module.cpp  attitude_skew_symmetric_p_module_interface.cpp  manipulator_compensation.cpp  manipulator_compensation_interface.cpp  position_p_module.cpp  position_p_module_interface.cpp  twist_model_based.cpp  twist_model_based_interface.cpp  twist_pid.cpp  twist_pid_interface.cpp  velocity_control_node_interfaces.cpp
bluerov_estimation/: CMakeLists.txt  package.xml
bluerov_estimation/config/: kf_config.yaml
bluerov_estimation/include/bluerov_estimation/: kf.hpp  kf_interfaces.hpp
bluerov_estimation/launch/: estimation.launch.py
bluerov_estimation/nodes/: estimation_node.cpp
bluerov_estimation/src/: kf.cpp  kf_interfaces.cpp
bluerov_trajectory_gen/: CMakeLists.txt  package.xml
bluerov_trajectory_gen/config/: traj_params.yaml
bluerov_trajectory_gen/include/bluerov_trajectory_gen/: traj.hpp
bluerov_trajectory_gen/launch/: node_trajectory_gen.launch.py
bluerov_trajectory_gen/nodes/: trajectory_gen_node.cpp
bluerov_trajectory_gen/src/: traj.cpp
uvms_kinematic_ctrl/: CMakeLists.txt  package.xml
uvms_kinematic_ctrl/config/: ctrl_params.yaml  planner_params.yaml  watchdog_params.yaml
uvms_kinematic_ctrl/include/uvms_kinematic_ctrl/: kin_ctrl.hpp  kin_ctrl_node_interface.hpp  kinematics.hpp
uvms_kinematic_ctrl/launch/: evaluation_topics.launch.py  node_estimation_drift_watchdog.launch.py  odometry_map.launch.py  planner_ctrl.launch.py  rviz.launch.py  top_uvms_complete.launch.py  top_uvms_decoupled_complete.launch.py  top_uvms_decoupled_sim_complete.launch.py  top_uvms_pap_complete.launch.py  top_uvms_pap_sim_complete.launch.py  top_uvms_sim_complete.launch.py  uvms_kin_ctrl.launch.py  uvms_pap_kin_ctrl.launch.py
uvms_kinematic_ctrl/nodes/: estimation_drift_watchdog_node.cpp  pap_evaluation_node.cpp  pap_evaluation_node.hpp  uvms_kin_ctrl_node.cpp  uvms_kin_ctrl_node.hpp  uvms_kin_ctrl_node_configuation_space.cpp  uvms_kin_ctrl_node_configuration_space.hpp  uvms_planner_node (copy).cpp  uvms_planner_node (copy).hpp  uvms_planner_node.cpp  uvms_planner_node.hpp  uvms_switching_kin_ctrl_node.cpp  uvms_switching_kin_ctrl_node.hpp  uvms_switching_kin_ctrl_node_configuration_space.cpp  uvms_switching_kin_ctrl_node_configuration_space.hpp
uvms_kinematic_ctrl/rviz/: rviz.rviz
uvms_kinematic_ctrl/scripts/: manipulator_kinematics.py  plot_weighted_regularization_comparison.py  test_acceleration_smoothing.py  test_activation.py  test_collision_constraints.py  test_ellipse.py  test_ellipse_symbolic.m  test_ellipse_symbolic.py  test_svd_filtering.py  test_velocity_saturation.py  test_weighted_pseudoinverse.py  test_weighted_regularization.py  visualization.py
uvms_kinematic_ctrl/src/: kin_ctrl.cpp  kin_ctrl_node_interface.cpp  kinematics.cpp
uvms_kinematic_ctrl/test/: test_kinematics.cpp
uvms_sim/: CMakeLists.txt  package.xml
uvms_sim/config/: alpha_base_tf_params_bluerov.yaml
uvms_sim/env-hooks/: uvms_sim.dsv.in
uvms_sim/launch/: spawn_object.launch.py  spawn_uvms.launch.py  uvms_sim.launch.py
uvms_sim/models/urdf/: uvms.urdf.xacro  uvms_rviz.urdf.xacro
uvms_sim/src/: static_bridge.cpp
uvms_trajectory_gen/: CMakeLists.txt  package.xml
uvms_trajectory_gen/config/: traj_params.yaml
uvms_trajectory_gen/include/uvms_trajectory_gen/: traj.hpp
uvms_trajectory_gen/launch/: decoupled_traj_gen.launch.py  traj_gen.launch.py  traj_pap_gen.launch.py
uvms_trajectory_gen/nodes/: uvms_traj_gen_node.cpp  uvms_traj_gen_node.hpp  uvms_traj_gen_node_initial_startup.cpp  uvms_traj_gen_node_initial_startup.hpp  uvms_traj_gen_pick_place_node.cpp  uvms_traj_gen_pick_place_node.hpp
uvms_trajectory_gen/src/: traj.cpp
uvms_visualization/: CMakeLists.txt  package.xml
uvms_visualization/include/uvms_visualization/: visualizations.hpp
uvms_visualization/launch/: rviz_bag_config.launch.py  visualization.launch.py  visualize_bagfile.launch.py
uvms_visualization/nodes/: visualization_node.cpp
uvms_visualization/rviz/: rviz_bag_config.rviz
uvms_visualization/src/: visualizations.cpp
