<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>uvms_sim</name>
    <version>0.0.0</version>
    <description>TODO: Package description</description>
    <maintainer email="niklast@todo.todo">niklast</maintainer>
    <license>TODO: License declaration</license>

    <depend>rclcpp</depend>
    <depend>libgflags-dev</depend>
    <depend>ros_gz</depend>
    <depend>gz_plugin_vendor</depend>
    <depend>gz_sim_vendor</depend>
    <depend>gz_common_vendor</depend>
    <depend>gz_msgs_vendor</depend>
    <depend>gz_math_vendor</depend>
    <depend>gz_transport_vendor</depend>

    <depend>hippo_gz_msgs</depend>
    <depend>hippo_msgs</depend>
    <depend>hippo_control_msgs</depend>
    <depend>alpha_msgs</depend>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
